src/objects/AECOM_Primary_Department__c.object
<CustomObject>
    <description>AECOM Primary Department</description>
    <fields>
        <fullName>Area__c</fullName>
        <description>Subset of Region</description>
        <inlineHelpText>Select one</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Carolinas - Tennessee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia - Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater New York - Pennsylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater NorCal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Ontario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater SoCal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Toronto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulf Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii - Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miami Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philadelphia Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Bay Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAT OpCo Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Canada - Mountain States</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BD_ROI_Oracle_lookup__c</fullName>
        <formula>&apos;http://my.aecomnet.com/deployedfiles/Intranet/Geographies/Americas/Functions/Finance/Documents/OH%20&amp;%20BD%20Projects%20FY15.xlsx&apos;</formula>
        <inlineHelpText>Click to look up Oracle #</inlineHelpText>
        <label>BD ROI Oracle # lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Line\SBU</label>
        <referenceTo>Business_Line__c</referenceTo>
        <relationshipLabel>AECOM  Departments</relationshipLabel>
        <relationshipName>AECOM_Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Manager responsible for this P&amp;L</inlineHelpText>
        <label>Business Unit Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AECOM_Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Notes on changes to status etc.</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Market__c</fullName>
        <description>&quot;Super Business Line&quot; formerly called &quot;BL Group&quot;</description>
        <inlineHelpText>Super Business Line formerly called &quot;BL Group&quot;</inlineHelpText>
        <label>End Market</label>
        <picklist>
            <picklistValues>
                <fullName>Buildings and Places</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resources and Industry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FY12_Plan__c</fullName>
        <description>Plan amount from F&amp;A in local currency</description>
        <inlineHelpText>Plan amount from F&amp;A in local currency</inlineHelpText>
        <label>FY12 Plan</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Plan__c</fullName>
        <description>Plan amount from F&amp;A in local currency</description>
        <inlineHelpText>Plan amount from F&amp;A in local currency</inlineHelpText>
        <label>FY13 Plan</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geography_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>AECOM  Departments</relationshipLabel>
        <relationshipName>AECOM_Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Geography</description>
        <label>Geography</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Division__c</fullName>
        <description>Highest level of company organization</description>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design &amp; Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Capital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Defines group layer above the geography level. Name changed from Group to Super Geo in December 2014.</description>
        <inlineHelpText>Select Americas for all North and South America departments, select APAC for all Asia and ANZ departments, and select EMEA for Europe, Middle East, Africa departments.</inlineHelpText>
        <label>Super Geo</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_District__c</fullName>
        <description>Lead District</description>
        <label>Lead District</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Region__c</fullName>
        <description>Lead Region</description>
        <label>Lead Region</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Company__c</fullName>
        <label>Legacy Company</label>
        <picklist>
            <picklistValues>
                <fullName>AECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_DepartmentID__c</fullName>
        <description>This filed contains Name of AECOM Department  and will  populate automatically on Insert/ Update</description>
        <externalId>true</externalId>
        <label>Legacy DepartmentID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>Office (added for ANZ)</description>
        <label>Office</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <description>Subset of Group used for enterprise-wide reporting</description>
        <inlineHelpText>Subset of Group used for enterprise-wide reporting</inlineHelpText>
        <label>Operating Group</label>
        <picklist>
            <picklistValues>
                <fullName>CS-BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS-EIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS AME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS EMEA+I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBU_Account__c</fullName>
        <description>Level 4 of CS Org</description>
        <label>SBU Account</label>
        <picklist>
            <picklistValues>
                <fullName>Advatech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fossil AQCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fossil New Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fossil Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fossil T&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highways &amp; Bridges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Commercial D&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear New Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Plant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil, Gas &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Services &amp; Fabrication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail &amp; Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Resources</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_BD_Key_Client_No__c</fullName>
        <description>created for FY14 BD ROI. Data provided by Dave Chung. Used to auto-populate B&amp;P generic charge numbers.</description>
        <inlineHelpText>Enter 8-digit Oracle number from Finance.
For URS departments, preface with &quot;URS led - use this Project: &quot;</inlineHelpText>
        <label>Oracle BD Key Client #</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_BD_Sector_No__c</fullName>
        <description>created for FY14 BD ROI. Data provided by Dave Chung. Used to auto-populate B&amp;P generic charge numbers.</description>
        <inlineHelpText>Enter 8-digit Oracle number from Finance.
For URS departments, preface with &quot;URS led - use this Project: &quot;</inlineHelpText>
        <label>Oracle BD Sector #</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_String__c</fullName>
        <label>Org String</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Regions as of October 2014</description>
        <inlineHelpText>Select one</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AME Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AME Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AME Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AME Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AME West/Gulf Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA-Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Active means department is currently open, Inactive means it is not longer open and should be excluded in lookups for opportunities.</description>
        <inlineHelpText>Active = department is currently open
Inactive = no longer open and should be excluded in lookups for opportunities</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URS_Region__c</fullName>
        <inlineHelpText>Closest URS region</inlineHelpText>
        <label>URS Region</label>
        <picklist>
            <picklistValues>
                <fullName>Mid-Atlantic/South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest/Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain/South Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBU_Sub_account__c</fullName>
        <description>EIC org fourth level</description>
        <label>SBU Sub-account</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factory Production Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Field Hauling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Fabrication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Mechanical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upstream</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AECOM Department</label>
    <listViews>
        <fullName>AME_Midwest</fullName>
        <columns>NAME</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Geography_Lookup__c</columns>
        <columns>End_Market__c</columns>
        <columns>Area__c</columns>
        <columns>Region__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Lead_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AME Midwest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Group_Division__c</field>
            <operation>equals</operation>
            <value>Design &amp; Consulting</value>
        </filters>
        <label>AME Midwest</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AME_Pacific</fullName>
        <columns>NAME</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Geography_Lookup__c</columns>
        <columns>End_Market__c</columns>
        <columns>Area__c</columns>
        <columns>Region__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Lead_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AME Pacific</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>AME Pacific</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Departments</fullName>
        <columns>NAME</columns>
        <columns>Lead_District__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Geography__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Departments - All Geos and BLs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_ENV</fullName>
        <columns>NAME</columns>
        <columns>Legacy_Company__c</columns>
        <columns>End_Market__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Business_Line_Lookup__c</field>
            <operation>contains</operation>
            <value>Environment</value>
        </filters>
        <label>All Active-ENV</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Asia</fullName>
        <columns>NAME</columns>
        <columns>Geography__c</columns>
        <columns>Lead_District__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>Asia</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>7340</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_B_P_Departments</fullName>
        <columns>NAME</columns>
        <columns>End_Market__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Group__c</columns>
        <columns>Group_Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Line_Lookup__c</field>
            <operation>equals</operation>
            <value>PDD,Architecture,DP&amp;E,PCC,Building Engineering,Water,Transportation</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>All B&amp;P EMEA Departments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_B_P_Departments_URS_Legacy</fullName>
        <columns>NAME</columns>
        <columns>End_Market__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Group__c</columns>
        <columns>Geography__c</columns>
        <columns>Legacy_Company__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Line_Lookup__c</field>
            <operation>equals</operation>
            <value>Architecture,DP&amp;E,PCC,Building Engineering</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>7</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Legacy_Company__c</field>
            <operation>equals</operation>
            <value>URS</value>
        </filters>
        <label>B&amp;P New Opps created by URS Legacy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_B_P_US_Departments</fullName>
        <columns>NAME</columns>
        <columns>End_Market__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Group__c</columns>
        <columns>Geography__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Lead_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Line_Lookup__c</field>
            <operation>equals</operation>
            <value>Architecture,DP&amp;E,PCC,Building Engineering</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All B&amp;P Departments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_B_P_US_Departments1</fullName>
        <columns>NAME</columns>
        <columns>End_Market__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Group__c</columns>
        <columns>Geography__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Lead_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Line_Lookup__c</field>
            <operation>equals</operation>
            <value>Architecture,DP&amp;E,Building Engineering,PCC,PDD</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>Asia</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All B&amp;P Asia Departments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Departments</fullName>
        <columns>NAME</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Lead_District__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Geography__c</columns>
        <columns>Geography_Lookup__c</columns>
        <columns>Status__c</columns>
        <columns>Group__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>0750-30.EM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Departments_Active_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Geography_Lookup__c</columns>
        <columns>Status__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Group_Division__c</columns>
        <columns>Legacy_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Inactive</value>
        </filters>
        <label>All Departments (Active and Inactive)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_South_America</fullName>
        <columns>NAME</columns>
        <columns>Lead_District__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Geography__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>latin america,south america</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All South America</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_active</fullName>
        <columns>NAME</columns>
        <columns>Legacy_Company__c</columns>
        <columns>End_Market__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>America_Active_Depts_w_URS_Depts</fullName>
        <columns>NAME</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>End_Market__c</columns>
        <columns>Group_Division__c</columns>
        <columns>Area__c</columns>
        <columns>Region__c</columns>
        <columns>Oracle_BD_Key_Client_No__c</columns>
        <columns>Oracle_BD_Sector_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>North America</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Group_Division__c</field>
            <operation>equals</operation>
            <value>Design &amp; Consulting</value>
        </filters>
        <filters>
            <field>Business_Line_Lookup__c</field>
            <operation>equals</operation>
            <value>Architecture,Building Engineering,DP&amp;E,PCC</value>
        </filters>
        <label>America Active Depts w/ URS Depts - B&amp;P</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>America_Active_Depts_w_URS_Depts_ENV</fullName>
        <columns>NAME</columns>
        <columns>Office__c</columns>
        <columns>Area__c</columns>
        <columns>Lead_District__c</columns>
        <columns>Lead_Region__c</columns>
        <columns>Region__c</columns>
        <columns>Business_Line_Lookup__c</columns>
        <columns>Oracle_BD_Key_Client_No__c</columns>
        <columns>Oracle_BD_Sector_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>North America</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Group_Division__c</field>
            <operation>equals</operation>
            <value>Design &amp; Consulting</value>
        </filters>
        <filters>
            <field>Business_Line_Lookup__c</field>
            <operation>contains</operation>
            <value>environment</value>
        </filters>
        <label>America Active Depts w/ URS Depts ENV</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AECOM Department</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AECOM  Departments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>